# (r1197,r1223)
 * Command 'scrollforward' will skip a border if this is less than a fraction of the screen; this smoothes up documents reading. The fraction is one over '_scroll_skip_page_fraction', if >1; 1/16 if 1, no tolerance if <1.
# (r1156)
 * Commands  scale '<'  /  scale '>' will shrink/magnify the image using cached mipmaps.
# (r1226)
 * Autocommand "PostInteractiveCommand" does not trigger anymore after 'quit' command.
# (r1196)
 * In case of CBZ,CBR,PDF,PS,DVI file, fimgs script will use '--autotop --autowidth'.
# (r1153,1154,1195)
 * fimgs script will now probe for unrar-nonfree/rar/unrar-free (in this order).
# (r1149)
 * Variable '_caption_over_image_fmt' will now customize overlay string contents.
# (r1147,r1148)
 * Command syntax 'goto {+|-}identifier[+]' (new) jumps to next file having a different value of i:identifier, also empty if without trailing `+'.
# (r1136)
 * Command limit '-set_union' will merge current limited list with the new one.
# (r1135)
 * Command limit '-merge' will merge current limited list with the new one.
# (r1133,r1134)
 * Command desc 'reload' loads once again description files specified at the command line with --load-image-descriptions-file.
# (r1130,r1131)
 * FIM won't check for duplicates on command line specified files unless sorting is requested.
# (r1126)
# * Makefile: added a stand-alone `make ltests' goal to test fim' language only.
# (r1113)
 * Switch -P/--text-reading fixed. Seems to be broken in version 0.5. (FIXME)
# (r1108)
 * Command "color": "color 'negate'" and "color 'desaturate'" introduced.
 * Commands 'negate' and 'desaturate' deleted.
# (r1107-r1011)
 * Command "color CVS" (CVS among 'protanopia', 'deuteranopia', 'tritanopia', 'p', 'd', 't') simulates a color vision deficiency; adding 'daltonize' applies a tentative color correction;  "color 'colorblind'" is short for "color 'deuteranopia'".
# (r1112)
 * Command "color 'identity'": populate the image with 'RGB identity' pixels.
# (r1104)